# sdk-nrf

samples/bluetooth/central_and_peripheral_hr/: copy_mynewt_script.sh  prj.conf  sysbuild.conf
samples/nrf54/empty_net_core/: CMakeLists.txt  nrf54.overlay  prj.conf  sample.yaml
samples/nrf54/empty_net_core/src/: main.c
sysbuild/: Kconfig.netcore
